--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,29 +7,32 @@ name = "django-srcdoc"
 dynamic = ["version"]
 description = 'A simple Django template tag to automate escaping HTML for use with the iframe srcdoc attribute. '
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 license = "MIT"
 keywords = []
 authors = [
   { name = "Hans Kelson", email = "hans@communitycomputing.net" },
 ]
 classifiers = [
-  "Development Status :: 4 - Beta",
+  "Development Status :: 5 - Production/Stable",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
+  "Framework :: Django",
+  "Framework :: Django :: 5.0",
+  "Framework :: Django :: 5.1",
 ]
-dependencies = []
+dependencies = [
+  "django>=5.1,<5.2"
+]
 
 [project.urls]
-Documentation = "https://github.com/Hans Kelson/django-srcdoc#readme"
-Issues = "https://github.com/Hans Kelson/django-srcdoc/issues"
-Source = "https://github.com/Hans Kelson/django-srcdoc"
+Documentation = "https://github.com/sheepman4267/django-srcdoc#readme"
+Issues = "https://github.com/sheepman4267/django-srcdoc/issues"
+Source = "https://github.com/sheepman4267 /django-srcdoc"
 
 [tool.hatch.version]
 path = "src/django_srcdoc/__about__.py"
